--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html>
 <head>
-<title>Welcome</title>
+<title>윤지의 웹페이지</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>WEB</h2>
-<p>WorldWideWeb (later renamed to Nexus to avoid confusion between the software and the World Wide Web) was the first web browser[1] and editor.[2] It was discontinued in 1994. At the time it was written, it was the sole web browser in existence,[1] as well as the first WYSIWYG HTML editor.
-
-The source code was released into the public domain on April 30, 1993.[3][4] Some of the code still resides on Tim Berners-Lee's NeXT Computer in the CERN museum and has not been recovered due to the computer's status as a historical artifact.[5] To coincide with the 20th anniversary of the research center giving the web to the world, a project began in 2013 at CERN to preserve this original hardware and software associated with the birth of the Web.[6]</p>
+    <div id="grid">
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">Javascript</a></li>
+  </ol>
+  <div id="article">
+<h2>Hello</h2>
+<p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the WWW are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server.</p>
 </body>
 </html>
